adding interactive charts

--- a/proto.kv
+++ b/proto.kv
@@ -350,6 +350,7 @@ WindowManager:
                         size_hint_y: None
                         height: self.texture_size[1]
                         text_size: self.width, None
+                        color: 0,0,0,1
                         
                 
                     
@@ -716,6 +717,7 @@ WindowManager:
 <FoodAnalysis>
     name:"food_analysis"
     BoxLayout:
+        
         orientation: "vertical"
         padding: 200
 
